--- a/front-end/src/resets.css
+++ b/front-end/src/resets.css
@@ -7,6 +7,7 @@
 html, body, #root {
   height: 100%;
   width: 100%;
+  background:linear-gradient(180deg, #f8fcff, #e5ecee);
   display: flex;
   flex-direction: column; 
   justify-content: center;
