--- a/front-end/src/resets.css
+++ b/front-end/src/resets.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,7 +11,7 @@ html, body, #root {
   background:linear-gradient(180deg, #f8fcff, #e5ecee);
   display: flex;
   flex-direction: column; 
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
