feat: feedback, hostform

--- a/front-end/src/components/SearchBar/SearchBar.module.css
+++ b/front-end/src/components/SearchBar/SearchBar.module.css
@@ -18,6 +18,7 @@
   padding: 16px;
   padding-left: 80px;
   font-size: 32px;
+  font-family: 'ABeeZee', sans-serif;
   border: 1px solid #ccc;
   border-radius: 16px;
   width: 100%;
