--- a/front-end/src/components/HostForm/HostForm.module.css
+++ b/front-end/src/components/HostForm/HostForm.module.css
@@ -24,6 +24,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: relative;
     cursor: default;
+    display: flex;
+    justify-content: center; /* 將整體置中 */
   }
 
   .label {
@@ -58,8 +60,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-left: 339px;
-    padding-right: 339px;
+    width: 100%;
+    max-width: 802px;
     padding-top: 59.5px;
   }
   
