--- a/front-end/src/App.module.css
+++ b/front-end/src/App.module.css
@@ -2,8 +2,9 @@
   width: 100vw;
   font-family: sans-serif;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column; /* 垂直排列 */
+  align-items: center; /* 水平置中 */
+  justify-content: flex-start; /* 讓內容從上往下排列 */
   padding-top: 25px;
   overflow-y: auto;
 }
@@ -62,4 +63,18 @@
 .userImage {
   width: 30px;
   height: 28px;
+}
+
+.activityGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  max-width: 1400px; /* 限制 grid 的最大寬度 */
+}
+
+.activityContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
