--- a/front-end/src/components/HostForm/HostForm.module.css
+++ b/front-end/src/components/HostForm/HostForm.module.css
@@ -96,7 +96,7 @@
   .dateField {
     width: 100%; 
     max-width: 180px; 
-    height: 85%; /* 設定高度為視窗的 60% */
+    height: 100%; /* 設定高度為視窗的 60% */
     max-height: 48px; /* 設定最大高度 */
     padding: 12px;
     font-size: 1rem;
@@ -121,6 +121,7 @@
   }
   
   .deadlineContainer {
+    width: 100%;
     display: flex;
     gap: 10px;
   }
