--- a/front-end/src/components/UserBotton/UserBotton.module.css
+++ b/front-end/src/components/UserBotton/UserBotton.module.css
@@ -116,12 +116,6 @@
     height: 85%; /* 設定高度為視窗的 60% */
     max-height: 48px; /* 設定最大高度 */
     padding: 12px;
-    font-size: 1rem;
-    font-family: 'ABeeZee', sans-serif;
-    /* border: 1px solid #ccc;
-    border-radius: 8px;
-    box-sizing: border-box;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); */
     margin-top: 20px;
     /* margin-bottom: 48px; */
     font-size: 1.2rem;
@@ -138,4 +132,42 @@
     align-items: center; /* 垂直置中 */
     height: 100vh; /* 父容器高度占滿整個視窗 */
     background-color: #f8f8f8; /* 可選：設置背景色 */
+  }
+
+  .buttonContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* 使按鈕在容器中置中 */
+  }
+
+  .optionbutton {
+    margin: 10px 0; /* 上下間距 */
+    padding: 10px 20px;
+    font-size: 16px;
+    font-size: 1.2rem;
+    font-family: 'ABeeZee', sans-serif;
+    font-weight: 500;
+    color: #5F5F5F;
+    border: 2px solid transparent; /* 預留空間但不顯示邊框 */
+    border-radius: 3px; /* 圓潤按鈕 */
+  }
+
+  .optionbutton:hover {
+    background-color: #6b6b6b; /* 較淺的深灰色背景 */
+    border: 2px solid #5f5f5f; /* 圓潤外框 */
+    border-radius: 3px; /* 圓潤按鈕 */
+    color: #ffffff; /* 文字變白色 */
+  }
+
+  .selectedOptionbutton {
+    margin: 10px 0; /* 上下間距 */
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none; /* 移除邊框 */
+    font-size: 1.2rem;
+    font-family: 'A4eeZee', sans-serif;
+    font-weight: 1200;
+    color: #000000; /* 深黑文字 */
+    border: 2px solid transparent; /* 預留空間但不顯示邊框 */
+    border-radius: 3px; /* 圓潤按鈕 */
   }
