--- a/front-end/src/components/UserBotton/UserInformation/UserInformation.module.css
+++ b/front-end/src/components/UserBotton/UserInformation/UserInformation.module.css
@@ -96,10 +96,10 @@
     /* parent節點已經置中，所以會相對置中 */
     width: 100%;
     max-width: 520px;
-    height: 85%; /* 設定高度為視窗的 60% */
+    height: 82; /* 設定高度為視窗的 60% */
     max-height: 48px; /* 設定最大高度 */
     padding: 12px;
-    margin-top: 5px;
+    margin-top: 0;
     /* margin-bottom: 48px; */
     font-size: 1.2rem;
     font-family: 'ABeeZee', sans-serif;
