--- a/front-end/src/components/Status/Component1_Property1LinkVarian/Component1_Property1LinkVarian.module.css
+++ b/front-end/src/components/Status/Component1_Property1LinkVarian/Component1_Property1LinkVarian.module.css
@@ -1,7 +1,7 @@
 .root {
   position: absolute;
-  left: 211px;
-  top: 82.5px;
+  left: 327px;  /* 354px - 32px (leaving some space between) */
+  top: 434px;   /* Align with the link element's top position */
   width: 24px;
   height: 24px;
   flex-direction: column;
