--- a/front-end/src/components/Status/Component7_Property1NotYet/Component7_Property1NotYet.module.css
+++ b/front-end/src/components/Status/Component7_Property1NotYet/Component7_Property1NotYet.module.css
@@ -1,29 +1,29 @@
 .root {
   position: absolute;
-  width: 128px;
-  height: 32px;
+  width: 86px;  /* 67% of 128px */
+  height: 21px;  /* 67% of 32px */
   flex-direction: column;
   align-items: flex-start;
   overflow: hidden;
 }
 .notYet {
   color: #626262;
-  font-size: 28px;
-  line-height: 22px;
+  font-size: 19px;  /* 67% of 28px */
+  line-height: 15px;  /* 67% of 22px */
   font-family: ABeeZee, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
   letter-spacing: -0.408px;
   position: absolute;
-  left: 5px;  /* 從 20px 改為 10px */
-  top: 5px;
+  left: 3px;  /* 67% of 5px */
+  top: 3px;  /* 67% of 5px */
   white-space: nowrap;
 }
 .panoramaFisheye {
   position: absolute;
-  left: 109px;  /* 從 10px 改為 5px */
+  left: 73px;  /* 67% of 109px */
   top: 45%;
-  width: 24px;
-  height: 24px;
+  width: 16px;  /* 67% of 24px */
+  height: 16px;  /* 67% of 24px */
   transform: translateY(-50%);
 }
 .icon {
