--- a/front-end/src/components/HostForm/HostForm.module.css
+++ b/front-end/src/components/HostForm/HostForm.module.css
@@ -10,6 +10,7 @@
     justify-content: center;
     z-index: 1000;
     cursor: default;
+    overflow: hidden;
   }
 
   .modal {
@@ -25,7 +26,9 @@
     position: relative;
     cursor: default;
     display: flex;
-    justify-content: center; /* 將整體置中 */
+    flex-direction: column; /* 修正讓內容呈現為垂直佈局 */
+    align-items: center; /* 將整體置中 */
+    /* justify-content: center; 將整體置中 */
   }
 
   .label {
@@ -176,7 +179,7 @@
     border-radius: 8px;
     cursor: pointer;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 0 auto;
+    margin: 0px auto;
   }
 
   .publicContainer {
