--- a/front-end/src/components/Status/Status.module.css
+++ b/front-end/src/components/Status/Status.module.css
@@ -94,7 +94,7 @@
 }
 .logo {
   position: fixed;
-  left: 0;
+  left: 20px;
   top: 24px;
   width: 122px;
   height: 66px;
@@ -141,6 +141,7 @@
   height: min-content;
   white-space: nowrap;
   flex-direction: column;
+  text-align: center;
 }
 .seeMore {
   color: #5f5f5f;
@@ -157,6 +158,7 @@
   text-align: end;
   align-items: end;
   flex-direction: column;
+  text-align: center;
 }
 .arrowRightDropCircle {
   position: absolute;
@@ -238,21 +240,23 @@
   height: min-content;
   white-space: nowrap;
   flex-direction: column;
+  text-align: center;
 }
 ._2024112220 {
   color: #3d3d3d;
-  font-size: 16px;  /* 24 * 0.67 */
-  line-height: 15px;  /* 22 * 0.67 */
+  font-size: 16px;
+  line-height: 15px;
   font-family: ABeeZee, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
   letter-spacing: -0.408px;
   position: absolute;
-  left: 770px;   /* 1150 * 0.67 */
-  top: 208px;    /* 310 * 0.67 */
+  left: 50%;
+  top: 208px;
+  transform: translateX(-50%);
   width: min-content;
   height: min-content;
   white-space: nowrap;
-  flex-direction: column;
+  text-align: center;
 }
 .line1 {
   position: absolute;
