--- a/front-end/src/components/HostForm/HostForm.module.css
+++ b/front-end/src/components/HostForm/HostForm.module.css
@@ -68,7 +68,7 @@
     padding-top: 59.5px;
   }
 
-  .inputField, .textareaField {
+  .inputField{
     width: 100%;
     max-width: 802px;
     height: 85%; /* 設定高度為視窗的 60% */
@@ -85,8 +85,7 @@
     width: 100%;
     max-width: 661px;
     min-width: 500px;
-    height: 85%; /* 設定高度為視窗的 60% */
-    max-height: 48px; /* 設定最大高度 */
+    height: 'auto';
     padding: 12px;
     font-size: 1rem;
     border: none;
@@ -111,8 +110,16 @@
   }
 
   .textareaField {
+    width: 100%;
+    max-width: 802px;
+    padding: 12px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    font-family: 'ABeeZee', sans-serif;
+    background-color: #f5f5f5;
     resize: vertical;
-    height: 80px;
   }
 
   .storeContainer {
@@ -192,10 +199,6 @@
     height: 24px;
   }
 
-  .checkbox2 {
-    width: 60px;
-    height: 60px;
-  }
   .createButton:hover {
     background-color: #0056b3;
   }
