update item and status page

--- a/front-end/src/components/ParticipantForm/Component1_Property1NotCheck/Component1_Property1NotCheck.module.css
+++ b/front-end/src/components/ParticipantForm/Component1_Property1NotCheck/Component1_Property1NotCheck.module.css
@@ -29,3 +29,9 @@
   overflow: hidden;
   transform: translate(-50%, -50%);
 }
+
+.checkbox {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
