--- a/front-end/src/components/Status/Component7_Property1Fail/Component7_Property1Fail.module.css
+++ b/front-end/src/components/Status/Component7_Property1Fail/Component7_Property1Fail.module.css
@@ -14,7 +14,7 @@
     'Liberation Sans', sans-serif;
   letter-spacing: -0.408px;
   position: absolute;
-  left: 7px;  /* 67% of 10px */
+  left: 3px;
   top: 3px;  /* 67% of 5px */
   white-space: nowrap;
 }
