--- a/front-end/src/components/Menu/Menu.module.css
+++ b/front-end/src/components/Menu/Menu.module.css
@@ -1,19 +1,7 @@
-.component1.component1 {
-  transform-origin: top left;
-  left: calc(50% - 0.0001px);
-  top: calc(50% - 0px);
-  width: 40px;
-  height: 40px;
-  transform: matrix(0.7071, 0.7071, -0.7071, 0.7071, 0, 0) translate(-50%, -50%);
-}
-.icon {
-  width: 100%;
-  height: 100%;
-}
 .root {
   position: relative;
-  width: 900px;  /* reduced from 1180px */
-  height: 500px;  /* reduced from 648px */
+  width: 900px;
+  height: 500px;
   flex-direction: column;
   align-items: flex-start;
   border-radius: 25px;
@@ -25,9 +13,10 @@
   box-shadow: 0px 4px 4px 0px #00000040;
   backdrop-filter: blur(7.5px);
 }
+
 .frame16 {
   position: absolute;
-  left: 840px;  /* reduced from 1120px */
+  left: 840px;
   top: 20px;
   width: 60px;
   height: 60px;
@@ -35,49 +24,35 @@
   align-items: flex-start;
   overflow: hidden;
 }
-.image1 {
+
+.menuImage {
   position: absolute;
   left: 50%;
-  top: calc(50% - 0px);
-  width: 600px;  /* reduced from 720px */
-  height: 444px;  /* reduced from 532px */
-  background-image:/* webpackIgnore: true */ url('/assets/image1.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  top: 50%;
+  width: 600px;
+  height: 444px;
   transform: translate(-50%, -50%);
 }
-.image2 {
-  position: absolute;
-  left: 50%;
-  top: calc(50% - 0px);
-  width: 600px;  /* reduced from 720px */
-  height: 444px;  /* reduced from 532px */
-  background-image:/* webpackIgnore: true */ url('/assets/image2.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transform: translate(-50%, -50%);
-}
+
 .menuRight {
   position: absolute;
-  left: 764px;  /* reduced from 1004px */
-  top: 170px;  /* reduced from 324.9998px */
-  width: 120px;  /* reduced from 160px */
-  height: 120px;  /* reduced from 160px */
+  left: 764px;
+  top: 170px;
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
 }
-.icon2 {
-  width: 100%;
-  height: 100%;
-}
+
 .menuLeft {
   position: absolute;
-  left: 16px;  /* reduced from 65px */
-  top: 170px;  /* reduced from 326px */
-  width: 120px;  /* reduced from 160px */
-  height: 120px;  /* reduced from 160px */
+  left: 16px;
+  top: 170px;
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
 }
-.icon3 {
+
+.icon2, .icon3 {
   width: 100%;
   height: 100%;
 }
