--- a/front-end/src/components/OrderItem/OrderItem.module.css
+++ b/front-end/src/components/OrderItem/OrderItem.module.css
@@ -136,19 +136,20 @@ body {
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
+  padding: 20px;
 }
 
 .item {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  width: 90%;
   margin-bottom: 10px;
   gap: 8px; /* Add this line to reduce space between items */
 }
 
 .itemName, .number, .price {
   color: #5f5f5f;
-  font-size: 12px; /* 15px * 0.8 */
+  font-size: 15px; /* 15px * 0.8 */
   line-height: 14px; /* 18px * 0.8 */
   font-family: ABeeZee, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
