--- a/front-end/src/components/ParticipantForm/ParticipantForm.module.css
+++ b/front-end/src/components/ParticipantForm/ParticipantForm.module.css
@@ -321,10 +321,29 @@
   width: 100%;
   padding: 8px;
   font-size: 16px;
-  border: none; /* Remove border color */
+  border: none;
   border-radius: 4px;
   box-sizing: border-box;
-  background: transparent;
+  background: #f9f9f9;
+  cursor: not-allowed;
+  color: #666;
+}
+
+
+.descriptionInput {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: #f9f9f9;
+}
+
+.descriptionRow {
+  margin-top: 8px;
+  padding-left: 0;
+  width: 100%;
 }
 
 /* Remove .dynamicInputGroup class */
@@ -383,7 +402,7 @@
   top: 0;
   margin: 0;
   transform: none;
-  /* width: 10%; */
+  width: 55%;
 }
 
 .frame27 {
@@ -455,6 +474,20 @@
   margin: 0;
   width: 20%; /* Adjusted width */
 }
+.frame224 {
+  position: relative;
+  /* width: 15%; */
+  height: 48px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  overflow: hidden;
+  box-shadow: 5px 5px 7.3px 0px #00000040;
+  width: 100%; /* Adjusted width */
+  margin: 0;
+}
 
 .frame24 {
   width: 15%;
@@ -480,4 +513,18 @@
   width: 24px;
   height: 24px;
   cursor: pointer;
+}
+
+.selectField {
+  width: 30%;
+  max-width: 661px;
+  min-width: 390px;
+  height: 48px;
+  padding: 12px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  font-family: 'ABeeZee', sans-serif;
+  background-color: #f9f9f9;
 }
