Apply pre-commit fixes

--- a/front-end/src/App_orderitem.module.css
+++ b/front-end/src/App_orderitem.module.css
@@ -1,4 +1,4 @@
-.root {
+.orderroot {
   min-height: 100vh;
   width: 100%;
   font-family: sans-serif;
@@ -6,6 +6,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .menuList {
