--- a/front-end/src/components/_resets.module.css
+++ b/front-end/src/components/_resets.module.css
@@ -11,10 +11,14 @@
   overflow-wrap: anywhere;
 }
 
+
+
 :where(.clapyResets),
-:where(.clapyResets) :not(span, a, ul, ol, li, p) {
+:where(.clapyResets) :not(span, a, ul, ol, li, p, .overlay) {
   display: flex;
 }
+
+
 
 :where(.clapyResets) ul,
 :where(.clapyResets) ol {
